--- a/28.Pgination/index.html
+++ b/28.Pgination/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="pagination">
       <li>
-        <a href="index.html"><<</a>
+        <a href="index9.html"><<</a>
         <a href="index.html" class="active">1</a>
         <a href="index2.html">2</a>
         <a href="index3.html">3</a>
