--- a/9Dropdown/index-2.html
+++ b/9Dropdown/index-2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <ul class="item-one">
                 <li><a href="">One</a></li>
@@ -23,6 +23,9 @@
                 <li><a href="">Four</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
+
+
+    
 </body>
 </html>
