--- a/29.Pseudo Class/index.html
+++ b/29.Pseudo Class/index.html
@@ -27,10 +27,10 @@
     <br/>
     <nav>
         <a href="https://www.google.com" target="_blank">Google</a>
-        <a href="https://www.google.com" target="_blank">Google</a>
-        <a href="https://www.google.com" target="_blank">Google</a>
-        <a href="https://www.google.com" target="_blank">Google</a>
-        <a href="https://www.google.com" target="_blank">Google</a>
+        <a href="mailto:9012kumaranil@gmail.com" target="_blank">Gmail</a>
+        <a href="tel:+9411894517" target="_blank">Phone</a>
+        <a href="https://www.yahoobaba.com" target="_blank">yahoobaba</a>
+        <a href="https://www.dog.com" target="_blank">Dog</a>
         <a href="https://www.google.com" target="_blank">Google</a>
         <a href="https://www.google.com" target="_blank">Google</a>
     </nav>
