--- a/39.Css-Project/3-Responsive-Template/index.html
+++ b/39.Css-Project/3-Responsive-Template/index.html
@@ -20,6 +20,9 @@
     <!-- Eternale StyleSheet Start -->
     <link rel="stylesheet" href="style.css" />
     <!-- Eternale StyleSheet End -->
+
+    <link rel="shortcut icon" href="/39.Css-Project/3-Responsive-Template/music/favicon.ico" type="image/x-icon">
+
   </head>
   <body>
     <!-- Hero Section Start-->
