--- a/3Float/index.html
+++ b/3Float/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="box">
-      <img class="one" src="mahatma.jpg" alt="" />
+    <div class="box-1">
+      <img class="box-1-image-1" src="mahatma.jpg" alt="" />
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, magnam
         non vel odit veritatis rerum eum doloremque eius alias rem fugiat
@@ -56,7 +56,7 @@
         quaerat tenetur assumenda natus? Perferendis officiis neque cumque quo
         excepturi?
       </p>
-      <img class="two" src="mahatma.jpg" alt="" />
+      <img class="box-1-image-2" src="mahatma.jpg" alt="" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
         omnis facilis distinctio harum, accusamus asperiores voluptatum ipsum
@@ -98,6 +98,87 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, magnam
         non vel odit veritatis rerum eum doloremque eius alias rem fugiat
         distinctio, nesciunt aliquid at sit ducimus consectetur vero nobis in
+      </p>
+    </div>
+
+    <div class="box">
+
+      <h1>Float Property uses</h1>
+      
+      <img class="one" src="unplash-2.jpg" alt="" />
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+        voluptatum animi eius recusandae beatae nesciunt in a quaerat modi
+        doloremque molestias voluptatibus, dolore eveniet? Illum iusto sequi,
+        veniam, fugit repudiandae ad ducimus exercitationem enim itaque earum
+        labore expedita quas voluptatibus, adipisci quia sint molestiae vero!
+        Aperiam quaerat at dolores necessitatibus debitis consequatur enim quos
+        velit amet pariatur vel animi nulla ea accusamus, architecto, laborum
+        mollitia sequi hic repudiandae exercitationem officia sunt? Ad assumenda
+        qui iusto sapiente vero soluta laboriosam, voluptatibus molestias
+        exercitationem quam. Voluptate officia molestiae ut fugit illum odit
+        recusandae cumque veniam fugiat culpa id numquam, eligendi obcaecati,
+        odio, sed soluta. Quibusdam ipsa ipsum necessitatibus consequatur
+        impedit quas nulla similique veniam nobis dolorem illum pariatur
+        accusamus, blanditiis, voluptas ea doloremque! Earum quaerat cumque,
+        necessitatibus perspiciatis explicabo tenetur blanditiis quae quos.
+        Error, ullam assumenda veritatis quas suscipit cupiditate ea voluptatum
+        quidem corporis esse maxime eveniet possimus, dignissimos a facilis
+        repellat tenetur! Architecto voluptatum eveniet deleniti. Dolorum
+        aspernatur atque voluptatem nostrum laudantium provident magnam
+        consectetur doloremque, labore hic, placeat autem, totam asperiores
+        delectus! Nesciunt rerum error inventore dolorem nobis cumque qui
+        voluptas consequuntur dignissimos distinctio necessitatibus ipsum facere
+        soluta odit, quos recusandae rem. Aliquam quo praesentium tempore
+        aliquid architecto dicta perferendis, atque obcaecati fugit consectetur
+        cumque iure ratione debitis iusto. Vitae quod quos at, sequi cupiditate
+        corrupti porro nam dolor quae modi vel atque molestiae, eveniet libero
+        obcaecati eos repudiandae. Molestiae quia, quos fugit maiores quibusdam
+        provident vitae reiciendis aspernatur eaque at quae explicabo est animi
+        eligendi perspiciatis magni cum. Assumenda dignissimos dicta ullam eum
+        ipsam optio vitae dolore vel? Enim similique ad velit dolore recusandae,
+        nihil fugiat laboriosam minima quaerat nulla, itaque alias obcaecati
+        ratione esse voluptas quae rerum officiis voluptatum beatae ipsa natus
+        ipsum animi excepturi vitae! Optio explicabo quas hic placeat inventore
+        delectus voluptas tempora quasi! Earum, repellat?
+      </p>
+
+      <img class="two" src="anplash.jpg" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime
+        dignissimos corporis tenetur quae ipsam. Quisquam dolor esse, mollitia
+        enim iusto aliquam illo autem nemo quaerat quo libero fuga veritatis
+        facilis praesentium debitis. Ducimus blanditiis a laboriosam unde
+        accusamus ratione nostrum dicta voluptas, modi maxime! Earum recusandae
+        qui repellendus natus, mollitia illo quo nesciunt molestias nobis quos
+        voluptatem, tempore voluptate repudiandae cum corrupti illum deleniti
+        quia, praesentium ipsum quam? Ducimus ullam enim dolore a dignissimos
+        velit, cumque nulla non dolorum pariatur quo mollitia perferendis
+        consectetur debitis numquam laboriosam praesentium molestiae? Deserunt
+        soluta, blanditiis nostrum expedita in modi esse vel molestias
+        accusantium tempora, necessitatibus perferendis amet pariatur, eius
+        saepe veniam fuga id voluptatum! Ab error perferendis sequi mollitia
+        facilis odit tempore a eaque dicta nobis sunt earum, non minima fuga
+        quidem ipsam. Velit ipsam cum recusandae natus voluptatum quia iure
+        quidem eius explicabo quam repellendus nemo sequi libero voluptate
+        deleniti, rerum quo voluptatem amet corporis quis. Voluptatibus, quam
+        obcaecati quod totam ipsum non reprehenderit laudantium repudiandae sit
+        harum. Aperiam, veniam minus cumque dolorum vel similique, voluptas quam
+        minima harum itaque amet ducimus autem ipsam voluptate quibusdam saepe?
+        Tenetur fuga cumque sequi! Pariatur voluptates alias temporibus et ab
+        harum! Corrupti incidunt cumque explicabo reprehenderit deleniti, omnis
+        velit? Ullam odio consectetur ad porro aperiam. Hic consequatur
+        exercitationem eos doloribus vitae repellat at dignissimos saepe
+        perferendis accusamus eum dolores labore illum, ullam nemo sint magni
+        nihil corporis laboriosam libero! Fuga quibusdam maxime labore dolorum
+        modi, iste laboriosam, illum commodi provident harum quaerat, facere
+        temporibus voluptate fugiat adipisci quidem soluta facilis culpa vero?
+        Adipisci, itaque esse velit magni possimus iste porro reiciendis
+        eveniet! Impedit illum inventore veniam perspiciatis nisi saepe natus,
+        perferendis sapiente non, facilis officiis eos aliquam ad. Facilis esse
+        ad exercitationem saepe alias. Officia nemo quidem soluta eos nostrum
+        voluptas qui ab a?
       </p>
     </div>
   </body>
