Added some code

--- a/10.OUTLINE/index.html
+++ b/10.OUTLINE/index.html
@@ -13,7 +13,7 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nulla
         illo odio voluptate eum doloribus rerum vitae cumque nam delectus
-        impedit, culpa, laboriosam labore magni ad hic, autem odit quasi.
+        impedit, culpa, laboriosam labore magni ad hic, autem odit quasi. Lorem ipsum dolor sit amet.
       </p>
       <img src="download.jpeg" alt="" />
       <p>
